feat: first contact group3

--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <!-- Start Coding here -->
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Tripp</title>
+</head>
+
+<body>
+
+  <!-- Nong Mo -->
+  <header>
+    <!-- Nong Mo -->
+  </header>
+  <!-- Nong Mo -->
+  <!-- Nong Mo -->
+  <section>
+    <!-- Nong Mo -->
+  </section>
+  <!-- Nong Mo -->
+
+  <!-- P'Pipo -->
+  <section>
+    <!-- P'Pipo-->
+  </section>
+  <!-- P'Pipo -->
+  <!-- P'Pipo -->
+  <section>
+    <!-- P'Pipo-->
+  </section>
+  <!-- P'Pipo -->
+
+  <!-- Train -->
+  <section>
+    <!-- Train -->
+  </section>
+  <!-- Train -->
+  <!-- Train -->
+  <section>
+    <!-- Train -->
+  </section>
+  <!-- Train -->
+
+  <!-- Nong Mon-->
+  <section>
+    <!-- Nong Mon-->
+  </section>
+  <!-- Nong Mon-->
+  <!-- Nong Mon-->
+  <section>
+    <!-- Nong Mon-->
+  </section>
+  <!-- Nong Mon-->
+
+</body>
+
 </html>
