--- a/index.html
+++ b/index.html
@@ -1,59 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
+      crossorigin="anonymous"
+    />
+    <title>Tripp</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <title>Tripp</title>
-</head>
-
-<body>
-
-  <!-- Nong Mo -->
-  <header>
+  <body>
     <!-- Nong Mo -->
-  </header>
-  <!-- Nong Mo -->
-  <!-- Nong Mo -->
-  <section>
-    <!-- Nong Mo -->
-  </section>
-  <!-- Nong Mo -->
+    <header class="contain-1">
+      <!-- Nong Mo -->
+      <div class="contain-section-1">
+        <header class="top-head">
+          <div class="head-1">
+            <span>Tripp</span>
+            <span class="point">.</span>
+          </div>
 
-  <!-- P'Pipo -->
-  <section>
-    <!-- P'Pipo-->
-  </section>
-  <!-- P'Pipo -->
-  <!-- P'Pipo -->
-  <section>
-    <!-- P'Pipo-->
-  </section>
-  <!-- P'Pipo -->
+          <nav class="head-2">
+            <a class="little1" href="">Home</a>
+            <a class="little2" href="">About</a>
+            <a class="little3" href="">Blog</a>
+            <a class="little4" href="">Tour Package</a>
+          </nav>
 
-  <!-- Train -->
-  <section>
+          <button class="head-3">Contact Us</button>
+        </header>
+
+        <div class="box-fuel">
+          <p class="top">Fuel Mind <br />by Travel</p>
+          <p class="under">
+            Enthusiastically extend extensive customer service <br />before best
+            breed convergence completely.
+          </p>
+        </div>
+
+        <div class="box-circle">
+          <img
+            class="image-circle"
+            src="./images/train-sec6.png"
+            alt="circle"
+          />
+          <div class="box-square">
+            <p class="square"></p>
+            <p class="mountain">Mountain Scot</p>
+            <div class="circle-main">
+              <p class="circle circle-1"></p>
+              <p class="circle circle-2"></p>
+              <p class="circle circle-3"></p>
+              <p class="circle circle-4">+</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="box-selector">
+          <div class="selector">
+            <div>
+              <p class="text-1">Location <i class="fas fa-chevron-down"></i></p>
+              <p class="text-2">Cox's Bazer</p>
+            </div>
+            <hr />
+            <div>
+              <p class="text-1">Date <i class="fas fa-chevron-down"></i></p>
+              <p class="text-2">Mon,14 Mar - Thu,17 Mar</p>
+            </div>
+            <hr />
+            <div>
+              <p class="text-1">
+                Avg.Price <i class="fas fa-chevron-down"></i>
+              </p>
+              <p class="text-2">$300 - $600</p>
+            </div>
+          </div>
+
+          <button class="explore">
+            Explore <i class="fas fa-arrow-right"></i>
+          </button>
+        </div>
+
+        <img class="background" src="./images/BG.png" alt="mountain" />
+      </div>
+    </header>
+
+    <!-- P'Pipo -->
+    <section>
+      <!-- P'Pipo-->
+    </section>
+    <!-- P'Pipo -->
+    <!-- P'Pipo -->
+    <section>
+      <!-- P'Pipo-->
+    </section>
+    <!-- P'Pipo -->
+
     <!-- Train -->
-  </section>
-  <!-- Train -->
-  <!-- Train -->
-  <section>
+    <section>
+      <!-- Train -->
+    </section>
     <!-- Train -->
-  </section>
-  <!-- Train -->
+    <!-- Train -->
+    <section>
+      <!-- Train -->
+    </section>
+    <!-- Train -->
 
-  <!-- Nong Mon-->
-  <section>
     <!-- Nong Mon-->
-  </section>
-  <!-- Nong Mon-->
-  <!-- Nong Mon-->
-  <section>
+    <section>
+      <!-- Nong Mon-->
+    </section>
     <!-- Nong Mon-->
-  </section>
-  <!-- Nong Mon-->
-
-</body>
-
+    <!-- Nong Mon-->
+    <section>
+      <!-- Nong Mon-->
+    </section>
+    <!-- Nong Mon-->
+  </body>
 </html>
