--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="text-center">
           <h4 class="font-bold">Family Vacations</h4>
-          <p class="text-xs">155 Properties</p>
+          <p class="text-xs text-zinc-400">155 Properties</p>
         </div>
       </div>
       <div class="box">
@@ -49,7 +49,7 @@
         </div>
         <div class="text-center">
           <h4 class="font-bold">Scuba Diving</h4>
-          <p class="text-xs">143 Properties</p>
+          <p class="text-xs text-zinc-400">143 Properties</p>
         </div>
       </div>
       <div class="box">
@@ -58,7 +58,7 @@
         </div>
         <div class="text-center">
           <h4 class="font-bold">Hunting Trip</h4>
-          <p class="text-xs">122 Properties</p>
+          <p class="text-xs text-zinc-400">122 Properties</p>
         </div>
       </div>
       <div class="box">
@@ -67,7 +67,7 @@
         </div>
         <div class="text-center">
           <h4 class="font-bold">Mountain Bike</h4>
-          <p class="text-xs">185 Properties</p>
+          <p class="text-xs text-zinc-400">185 Properties</p>
         </div>
       </div>
 
@@ -95,7 +95,7 @@
             </div>
             <div>
               <h4 class="font-bold">Elffel Tower</h4>
-              <p class="text-xs text-zinc-500">5d - 4n</p>
+              <p class="text-xs text-zinc-400">5d - 4n</p>
             </div>
           </div>
           <div class="flex w-[120px] h-[20px] mt-4">
@@ -118,7 +118,7 @@
             </div>
             <div>
               <h4 class="font-bold">Big Bear Lake</h4>
-              <p class="text-xs text-zinc-500">5d - 4n</p>
+              <p class="text-xs text-zinc-400">5d - 4n</p>
             </div>
           </div>
           <div class="flex w-[120px] h-[20px] mt-4">
@@ -141,7 +141,7 @@
             </div>
             <div>
               <h4 class="font-bold">Colorado Springs</h4>
-              <p class="text-xs text-zinc-500">5d - 4n</p>
+              <p class="text-xs text-zinc-400">5d - 4n</p>
             </div>
           </div>
           <div class="flex w-[120px] h-[20px] mt-4">
