--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="style.css" />
+  <link 
+    href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@400..800&family=Paytone+One&display=swap" 
+    rel="stylesheet">
+  <link 
+    href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" 
+    rel="stylesheet">
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
@@ -47,7 +53,7 @@
 <body>
   <!-- Nong Mo -->
   <header class="contain-1">
-    <!-- Nong Mo -->
+  
     <div class="contain-section-1">
       <header class="top-head">
         <div class="head-1">
@@ -64,8 +70,15 @@
         </nav>
 
         <button class="head-3">Contact Us</button>
+
+        <!-- hidden button -->
+        <button class="head-4">
+          <img class="hide" src="/images/Vector.png" alt="point">
+        </button>
       </header>
 
+      <div class="box-flex">
+        <img class="background" src="./images/BG.png" alt="mountain" />
       <div class="box-fuel">
         <p class="top">Fuel Mind <br />by Travel</p>
         <p class="under">
@@ -73,7 +86,7 @@
           breed convergence completely.
         </p>
       </div>
-
+      
       <div class="box-circle">
         <img class="image-circle" src="./images/train-sec6.png" alt="circle" />
         <div class="box-square">
@@ -87,7 +100,9 @@
           </div>
         </div>
       </div>
+      </div>
 
+      <div class="container-selector">
       <div class="box-selector">
         <div class="selector">
           <div>
@@ -112,10 +127,13 @@
           Explore <i class="fas fa-arrow-right"></i>
         </button>
       </div>
+      </div>
+    </div>
 
-      <img class="background" src="./images/BG.png" alt="mountain" />
+      
     </div>
   </header>
+  <!-- Nong Mo -->
 
 
   <section class="vacation flex flex-col flex-wrap w-screen max-sm:pl-0 max-sm:pr-0 max-sm:items-center">
