feat:responsive popular and feedback page

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
             'silver': '#c4c4c4',
             'light-salmon': '#ffa898',
             'slategray': '#5a7184',
+            'floral-white': '#FEF9F3',
+            'platinum': '#E9E4DE',
           },
           fontFamily: {
             'poppins': ['poppins', 'sans-serif'],
@@ -281,13 +283,15 @@
   </section>
 
   <!-- Train -->
-  <section class="w-full h-[888px] flex items-center relative">
-    <div class="w-[1700px] h-[535px] flex justify-between absolute left-[-110px] items-center">
+  <section
+    class="w-full h-[888px] flex items-center relative bg-floral-white max-[375px]:w-full max-[375px]:h-[1094px] max-[375px]:justify-center">
+    <div
+      class="w-[1700px] h-[535px] flex justify-between absolute left-[-110px] items-center max-[375px]:static max-[375px]:left-0 max-[375px]:flex-col">
       <!-- Card Slides Start -->
       <div class="flex items-center gap-[20px]">
         <!-- Card Left Start-->
         <div
-          class="w-[332px] h-[450px] bg-gradient-to-b from-gainsboro to-silver rounded-[20px] p-[20px] flex justify-center items-end">
+          class="w-[332px] h-[450px] bg-gradient-to-b from-gainsboro to-silver rounded-[20px] p-[20px] flex justify-center items-end max-[375px]:hidden">
           <div class="w-[272px] h-[60px] flex items-center justify-between">
             <p class="font-poppins font-semibold text-[20px] text-white">Great Wall of China<br /><span
                 class="font-dm-sans font-medium text-[18px]">Beijing, China</span></p>
@@ -304,7 +308,7 @@
         <!-- Card Left End-->
 
         <!--Card Center Start-->
-        <div class="flex  flex-col items-center justify-between">
+        <div class="flex  flex-col items-center justify-between max-[375px]:mt-[100px]">
           <div
             class="w-[332px] h-[450px] bg-gradient-to-b from-gainsboro to-silver rounded-[20px] p-[20px] flex justify-center items-end">
             <div class="w-[272px] h-[60px] flex items-center justify-between">
@@ -320,7 +324,7 @@
               </div>
             </div>
           </div>
-          <div class="w-[110px] h-[48px] mt-[35px] flex items-center justify-between">
+          <div class="w-[110px] h-[48px] mt-[35px] flex items-center justify-between max-[375px]:hidden">
             <!-- Button L start -->
             <button class="w-[32px] h-[32px] text-light-salmon ">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -338,12 +342,28 @@
             </button>
             <!-- Button R end -->
           </div>
+          <!-- Hidden Button Start -->
+          <div class="min-[376px]:hidden w-[92px] h-[20px] flex items-center justify-between mt-[40px]">
+            <button class="w-[20px] h-[20px] rounded-full bg-platinum">
+
+            </button>
+            <button
+              class="w-[20px] h-[20px] rounded-full border-[1px] border-mango-orange flex items-center justify-center">
+              <div class="w-[7px] h-[7px] rounded-full bg-mango-orange">
+
+              </div>
+            </button>
+            <button class="w-[20px] h-[20px] rounded-full bg-platinum">
+
+            </button>
+          </div>
+          <!-- Hidden Button End -->
         </div>
         <!-- Card Center End-->
 
         <!--Card Right Start-->
         <div
-          class="w-[332px] h-[450px] bg-gradient-to-b from-gainsboro to-silver rounded-[20px] p-[20px] flex justify-center items-end">
+          class="w-[332px] h-[450px] bg-gradient-to-b from-gainsboro to-silver rounded-[20px] p-[20px] flex justify-center items-end max-[375px]:hidden">
           <div class="w-[272px] h-[60px] flex items-center justify-between">
             <p class="font-poppins font-semibold text-[20px] text-white">Deep Creek Lake<br /><span
                 class="font-dm-sans font-medium text-[18px]">Maryland</span></p>
@@ -362,18 +382,25 @@
       <!-- Card Slides End-->
 
       <!-- Description Start-->
-      <div class="w-[574px] h-[406px] flex flex-col justify-between">
-        <p class="font-poppins font-bold text-[48px]">Most Popular Destination of Us!</p>
-        <p class="font-dm-sans text-dimgray text-[18px] leading-10">Credibly unleash economically sound
-          e-business
-          with<br />
-          bleeding-edge
-          users.
-          Uniquely simplify
-          mission-critical
-          benefits with cross-unit manufactured products. Energistically re-engineer </p>
+      <div class="w-[574px] h-[406px] flex flex-col justify-between max-[375px]:w-full max-[375px]:justify-center">
+        <div
+          class="max-[375px]:w-[327px] max-[375px]:h-[284px] max-[375px]:absolute max-[375px]:top-[90px] max-[375px]:left-[25px]">
+          <p class="font-poppins font-bold text-[48px] max-[375px]:text-[24px]">Most Popular<br /> Destination of Us!
+          </p>
+          <p
+            class="font-dm-sans text-dimgray text-[18px] leading-10 mt-[30px] max-[375px]:mt-[20px] max-[375px]:text-[13px]">
+            Credibly unleash
+            economically sound
+            e-business
+            with<br />
+            bleeding-edge
+            users.
+            Uniquely simplify
+            mission-critical
+            benefits with cross-unit manufactured products. Energistically re-engineer </p>
+        </div>
         <button
-          class="flex items-center justify-center w-[180px] h-[70px] bg-gradient-to-b from-portland-orange to-mango-orange rounded-xl">
+          class="flex items-center justify-center w-[180px] h-[70px] bg-gradient-to-b from-portland-orange to-mango-orange rounded-xl max-[375px]:absolute max-[375px]:bottom-[80px] max-[375px]:left-[95px]">
           <div class="flex items-center justify-between w-[100px] h-[24px] text-white">
             <p class="font-dm-sans text-[16px] font-bold">View All</p>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -389,25 +416,38 @@
   <!-- Train -->
 
   <!-- Train -->
-  <section class="w-full h-[987px] flex items-center justify-center">
-    <div class="w-[1417px] h-[736px] flex justify-between items-end">
+  <section class="w-full h-[987px] flex items-center justify-center max-[375px]:w-full max-[375px]:h-[1008px]">
+    <div
+      class="w-[1417px] h-[736px] flex justify-between items-end max-[375px]:w-[352px] max-[375px]:h-[895px] max-[375px]:flex-col max-[375px]:mt-[100px]">
       <!-- Circle Start -->
-      <div class="w-[632px] h-[736px] flex justify-center items-end">
-        <div class="w-[632px] h-[632px] rounded-full border-[#a8a8a8] border-[0.94px] brightness-105 contrast-200">
-          <img src="images/train-sec6.png" alt="" class="absolute right-7 bottom-5">
+      <div class="w-[632px] h-[736px] flex justify-center items-end max-[375px]:w-[352px] max-[375px]:h-[410px]">
+        <div
+          class="w-[632px] h-[632px] rounded-full border-[#a8a8a8] border-[0.94px] brightness-105 contrast-200 max-[375px]:w-[352px] max-[375px]:h-[352px]">
+          <img src="images/train-sec6.png" alt=""
+            class="absolute right-7 bottom-5 max-[375px]:w-[303px] max-[375px]:h-[303px] max-[375px]:right-3 max-[375px]:bottom-4">
         </div>
       </div>
       <!-- Circle End -->
 
       <!-- Description Start -->
-      <div class="w-[571px] h-[513px] flex flex-col justify-between mb-[80px]">
-        <p class="font-poppins font-bold text-[48px]">Feedback from<br /> Our Customers</p>
-        <p class="font-poppins font-semibold text-[24px] leading-10">“I’ve Went ot America from Tripp Play about 1 years
-          ago. Tripp
-          make the prototyping process so easy and
-          faster. I feel this is the best apps for Prototyping use”</p>
-        <p class="font-dm-sans font-medium text-[18px] text-slategray">— Ferdous - CEO of Coco</p>
-        <div class="w-[112px] h-[48px] flex justify-between">
+      <div
+        class="w-[571px] h-[513px] flex flex-col mb-[80px] max-[375px]:w-[327px] max-[375px]:h-[455px] max-[375px]:mr-[13px] max-[375px]:mt-[50px]">
+        <div>
+          <p class="font-poppins font-bold text-[48px] max-[375px]:text-[24px]">Feedback from<br /> Our
+            Customers</p>
+          <p
+            class="font-poppins font-semibold text-[24px] leading-10 mt-[30px] max-[375px]:text-[20px] max-[375px]:mt-[25px]">
+            “I’ve Went ot
+            America from Tripp Play
+            about 1
+            years
+            ago. Tripp
+            make the prototyping process so easy and
+            faster. I feel this is the best apps for Prototyping use”</p>
+          <p class="font-dm-sans font-medium text-[18px] text-slategray mt-[15px]">— Ferdous - CEO of Coco</p>
+        </div>
+
+        <div class="w-[112px] h-[48px] flex justify-between mt-[90px] max-[375px]:mt-[20px]">
           <!-- Button L Start -->
           <button class="w-[48px] h-[48px] flex items-center justify-center text-portland-orange">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-[48px] h-[48px]">
