feat:added resposive mobile

--- a/index.html
+++ b/index.html
@@ -118,17 +118,21 @@
   </header>
 
 
-  <section class="vacation flex flex-col flex-wrap w-screen max-sm:pl-0 max-sm:pr-0 max-sm:items-center">
-    <header class="flex justify-between max-sm:gap-6 max-sm:w-[375px]">
-      <div class="head-vacation w-[534px] h-[136px] font-bold text-5xl leading-[68px] max-sm:text-[24px]
-        max-sm:leading-[34px] max-sm:w-[280px] max-sm:h-[102px]">Start Your Vacation with Lost
+  <section
+    class="vacation flex flex-wrap flex-col w-screen max-[375px]:flex-nowrap max-[375px]:pl-10 max-[375px]:pr-0 max-[375px]:items-center max-[375px]:h-[533px]">
+    <header class="flex justify-between max-[375px]:gap-6 max-[375px]:w-[375px]">
+      <div class="head-vacation w-[534px] h-[136px] font-bold text-5xl leading-[68px] max-[375px]:text-[24px]
+        max-[375px]:leading-[34px] max-[375px]:w-[280px] max-[375px]:h-[102px]">Start Your Vacation with Lost
         of Services!</div>
-      <div class="view-all h-[24px] w-[188px] mt-[100px] text-orange-500 max-sm:mt-[75px] max-sm:hidden">View All
+      <div class="view-all h-[24px] w-[188px] mt-[100px] text-orange-500 max-[375px]:mt-[75px] max-[375px]:hidden">View
+        All
         Services 🡲</div>
-      <div class="view-all hidden h-[24px] w-[188px] mt-[100px] text-orange-500 max-sm:mt-[75px] max-sm:block">View
+      <div
+        class="view-all hidden h-[24px] w-[188px] mt-[100px] text-orange-500 max-[375px]:mt-[75px] max-[375px]:block">
+        View
         All 🡲</div>
     </header>
-    <div class=" flex justify-between flex-wrap gap-5 max-sm:flex-col max-sm:w-[375px]">
+    <div class=" flex justify-between gap-5 max-[375px]:flex-col max-[375px]:w-[375px]">
       <div class="box">
         <div class="icon-vacation">
           <img src="images/family.png">
@@ -138,7 +142,7 @@
           <p class="text-xs text-zinc-400">155 Properties</p>
         </div>
       </div>
-      <div class="box">
+      <div class="box max-[375px]:hidden">
         <div class="icon-vacation">
           <img src="images/scuba-diving.png">
         </div>
@@ -147,7 +151,7 @@
           <p class="text-xs text-zinc-400">143 Properties</p>
         </div>
       </div>
-      <div class="box">
+      <div class="box max-[375px]:hidden">
         <div class="icon-vacation">
           <img src="images/deer-facing-right.png">
         </div>
@@ -156,7 +160,7 @@
           <p class="text-xs text-zinc-400">122 Properties</p>
         </div>
       </div>
-      <div class="box">
+      <div class="box max-[375px]:hidden">
         <div class="icon-vacation">
           <img src="images/bicycle.png">
         </div>
@@ -173,14 +177,15 @@
   <!-- P'Pipo -->
   <!-- P'Pipo -->
   <section
-    class="package p-2 flex flex-col items-center gap-10 max-sm:gap-2 w-screen h-[1176px] max-sm:pl-0 max-sm:pr-0">
+    class="package p-2 flex flex-col items-center gap-10 max-[375px]:gap-2 w-screen h-[1176px] max-[375px]:pl-0 max-[375px]:pr-0  max-[375px]:h-[804px]">
 
-    <header class="pt-6 mb-4 text-center w-[400px] h-[136px] font-bold text-5xl leading-[68px] max-sm:text-[24px]
-    max-sm:leading-[34px] max-sm:w-[200px] max-sm:h-[102px]">Our Upcoming Tour Package</header>
+    <header class="pt-6 mb-4 text-center w-[400px] h-[136px] font-bold text-5xl leading-[68px] max-[375px]:text-[24px]
+    max-[375px]:leading-[34px] max-[375px]:w-[200px] max-[375px]:h-[102px]">Our Upcoming Tour Package</header>
 
-    <div class="flex gap-5 max-sm:flex-col max-sm:items-center max-sm:gap-10">
-      <div class="package-info mt-8 w-[453] h-[606] max-sm:w-[355px] max-sm:h-[494] max-sm:mt-0">
-        <div class="package-pic max-sm:w-[355px] max-sm:h-[407]">
+    <div class="flex gap-5 max-[375px]:flex-col max-[375px]:items-center max-[375px]:gap-10">
+
+      <div class="package-info mt-8 w-[453] h-[606] max-[375px]:w-[355px] max-[375px]:h-[494]">
+        <div class="package-pic max-[375px]:w-[355px] max-[375px]:h-[407]">
           <div class="price">$599</div>
         </div>
         <div class="flex justify-between mt-4">
@@ -202,8 +207,9 @@
           </div>
         </div>
       </div>
-      <div class="package-info w-[453] h-[606] max-sm:w-[325px] max-sm:h-[494] max-sm:mr-7">
-        <div class="package-pic max-sm:w-[355px] max-sm:h-[407]">
+      <div
+        class="package-info w-[453] h-[606] max-[375px]:w-[325px] max-[375px]:h-[494] max-[375px]:mr-7 max-[375px]:hidden">
+        <div class="package-pic max-[375px]:w-[355px] max-[375px]:h-[407]">
           <div class="price">$480</div>
         </div>
         <div class="flex justify-between mt-4">
@@ -225,8 +231,9 @@
           </div>
         </div>
       </div>
-      <div class="package-info mt-8 w-[453] h-[606] max-sm:w-[355px] max-sm:h-[494] max-sm:mt-0">
-        <div class="package-pic max-sm:w-[355px] max-sm:h-[407]">
+      <div
+        class="package-info mt-8 w-[453] h-[606] max-[375px]:w-[355px] max-[375px]:h-[494] max-[375px]:mt-0 max-[375px]:hidden">
+        <div class="package-pic max-[375px]:w-[355px] max-[375px]:h-[407]">
           <div class="price">$550</div>
         </div>
         <div class="flex justify-between mt-4">
@@ -250,7 +257,7 @@
       </div>
     </div>
 
-    <button class="w-[180px] h-[70px] bg-orange-500 rounded-[15px] text-white max-sm:p-5 max-sm:mt-5">View All
+    <button class="w-[180px] h-[70px] bg-orange-500 rounded-[15px] text-white max-[375px]:p-5 max-[375px]:mt-5">View All
       🡲</button>
 
   </section>
