fixed responsive issue

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 
   <section
-    class="vacation flex flex-wrap flex-col w-screen max-[375px]:flex-nowrap max-[375px]:pl-10 max-[375px]:pr-0 max-[375px]:items-center max-[375px]:h-[533px]">
+    class="vacation p-6 flex flex-wrap flex-col w-screen max-[375px]:flex-nowrap max-[375px]:pl-10 max-[375px]:pr-0 max-[375px]:items-center max-[375px]:h-[533px]">
     <header class="flex justify-between max-[375px]:gap-6 max-[375px]:w-[375px]">
       <div class="head-vacation w-[534px] h-[136px] font-bold text-5xl leading-[68px] max-[375px]:text-[24px]
         max-[375px]:leading-[34px] max-[375px]:w-[280px] max-[375px]:h-[102px]">Start Your Vacation with Lost
