--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
         <div class="w-[690px] h-[600px] z-1 absolute left-[150px] bottom-5 flex flex-col justify-between max-[375px]:w-[355px] max-[375px]:h-[470px] max-[375px]:left-2">
           <p class=" font-bold text-5xl font-poppins w-[528px] h-[204px] max-[375px]:w-[327px] max-[375px]:h-[120px] ">Subscribe <br>
             for every Tour <br>News & Tips </p>
-        <div class="Email w-[574px] h-[100px] rounded-xl flex items-center justify-center p-[10px] max-[375px]:w-[355px]">
+        <div class="Email w-[574px] h-[100px] rounded-xl flex items-center justify-center p-[10px] max-sm:w-[355px]">
             <input
               class="placeholder:text-black w-[310px] h-[70px] shadow-xl border-2 rounded-md focus:outline-none focus:border-orange-500 border-slate-200 hover:border-orange-300 placeholder-slate-300 flex items-center justify-between"
               type="Email" placeholder="Enter you email ">
