--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
         World Top Visiting <br />
         Place in 2021
       </div>
-      <div class=" w-[1522px] h-[743px] flex relative max-[375px]:w-[355px] max-[375px]:h-[187px] ">
+      <div class=" w-[100vw] h-[743px] flex relative max-[375px]:w-[355px] max-[375px]:h-[187px] ">
         <img src="images/mon-place.png" alt="place" />
         <div
           class="w-[120px] h-[204px] absolute left-10 max-[375px]:w-[29px] max-[375px]:h-[29px] max-[375px]:left-[100px]">
@@ -495,7 +495,7 @@
         <div
           class="w-[120px] h-[204px] absolute left-10 max-[375px]:w-[29px] max-[375px]:h-[29px] max-[375px]:left-[100px]">
           <div class="aus absolute left-[1200px] top-[500px] ">
-            <img class="ring-4 ring-zinc-300 rounded-full border" src="images/mon-australia 1.png" alt="Aus" />
+            <img class="ring-4 ring-zinc-300 rounded-full border " src="images/mon-australia 1.png" alt="Aus" />
             <h4 class="font-bold text-center max-[375px]:hidden">Australia</h4>
             <p class="text-xs text-zinc-400 text-center max-[375px]:hidden">02 Tour</p>
           </div>
@@ -507,7 +507,7 @@
 
     </div>
   </section>
-  <footer class=" w-full h-[818px] relative flex items-center max-[375px]:w-full max-[375px]:h-[562px]">
+  <footer class=" w-[100vw] h-[818px] relative flex items-center max-[375px]:w-full max-[375px]:h-[562px]">
     <div
       class="Subscribs brightness-150 bg-cover bg-no-repeat w-full h-[818px] max-[375px]:w-full max-[375px]:h-[562px]  "
       style="background-image: url('https://s3-alpha-sig.figma.com/img/d6f7/2f7e/40921abfd4cc950137a434c2a881e4f9?Expires=1716163200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=OY1~LdshUzU4d2qV4NWVqdWjViqN2HtltX-C7jKBTWTLUkqESWOm3W1pECyDD8f2a88RuNgk56OsMyX85iv7gDflGanMjRo2N7Hlzd4ZL9-~kVXGpr6y7uHLyk9DnOB5GXNiWCt8jxwwvN8Ox6L7AG9mrZS4QJ7BOXVwJZ5JESfGPkYkqfLgzZN3OfnzXMpEgaVRm~gjRoawtboNSwUuU16twAmzzemQ5n4gAbETyzxn6JJwTF5o88VVrNjS6gnICDD-tq~d0ZR5371BJ-C-lwKv6qXoilO~ktlIpPB5JkQvCTC53EBydkQRElcSV6oLsZ7xjAJ1BrLaO6KejQ98Zg__');">
@@ -517,7 +517,7 @@
           Subscribe <br>
           for every Tour <br>News & Tips </p>
         <div
-          class="Email w-[574px] h-[100px] rounded-xl flex items-center justify-center p-[10px] max-[375px]:w-[355px]">
+          class="Email w-[574px] h-[100px] rounded-xl flex items-center justify-center p-[10px] max-[375px]:w-[355px] max-[375px]:mt-[80px]">
           <input
             class="placeholder:text-black w-[310px] h-[70px] shadow-xl border-2 rounded-md focus:outline-none focus:border-orange-500 border-slate-200 hover:border-orange-300 placeholder-slate-300"
             type="Email" placeholder="Enter you email ">
@@ -537,7 +537,7 @@
             <p class="font-bold mt-5">Copyright©Tripp.All right reserved</p>
           </div>
           <div class="flex flex-row justify-end items-end ">
-            <div class="mt-6 flex flex-row ml-[200px] max-sm:w-[375px]">
+            <div class="mt-6 flex flex-row ml-[200px] max-sm:w-[375px] ">
               <img src="images/mon-google.png" alt="google">
               <img src="images/mon-twitter.png" alt="twitter">
               <img src="images/mon-Instagram.png" alt="Instagram">
