--- a/index.html
+++ b/index.html
@@ -466,60 +466,60 @@
     </div>
   </section>
   <!-- Train -->
-  <section class="w-full h-[1038px] flex items-end justify-center max-[375px]:w-full max-[375px]:h-[341px] ">
+  <section class="w-full h-[1038px] flex items-end justify-center max-[375px]:w-full max-[375px]:h-[341px] max-[1200px]:w-full max-[1200px]:h-[341px] ">
     <div
-      class="w-[100vw] h-[969px] flex flex-col items-center justify-between max-[375px]:w-[354px] max-[375px]:h-[294px]">
+      class="w-[100vw] h-[969px] flex flex-col items-center justify-between max-[375px]:w-[354px] max-[375px]:h-[294px] max-[1200px]:w-[354px] max-[1200px]:h-[294px]">
       <div
-        class="w-[574px] h-[136px] flex items-center justify-center font-poppins font-bold text-5xl max-[375px]:text-2xl">
+        class="w-[574px] h-[136px] flex items-center justify-center font-poppins font-bold text-5xl max-[375px]:text-2xl max-[1200px]:text-2xl">
         World Top Visiting <br />
         Place in 2021
       </div>
-      <div class=" w-[100vw] h-[743px] flex relative max-[375px]:w-[354px] max-[375px]:h-[187px] ">
+      <div class=" w-[100vw] h-[743px] flex relative max-[375px]:w-[354px] max-[375px]:h-[187px] max-[1200px]:w-[354px] max-[1200px]:h-[187px] ">
         <img class="z-0 brightness-90" src="images/mon-place.png" alt="place" />
         <div
-          class="w-full h-[204px] absolute left-10 max-[375px]:w-[29px] max-[375px]:h-[29px] ">
-          <div class="maxico mt-72 ml-[200px] flex flex-col items-center w-20 h-20  max-[375px]:h-[29px] max-[375px]:w-10 max-[375px]:ml-[10px] max-[375px]:mt-[100px]  ">
+          class="w-full h-[204px] absolute left-10 max-[375px]:w-[29px] max-[375px]:h-[29px] max-[1200px]:w-[29px] max-[1200px]:h-[29px] ">
+          <div class="maxico mt-72 ml-[200px] flex flex-col items-center w-20 h-20  max-[375px]:h-[29px] max-[375px]:w-10 max-[375px]:ml-[10px] max-[375px]:mt-[100px] max-[1200px]:h-[29px] max-[1200px]:w-10 max-[1200px]:ml-[10px] max-[1200px]:mt-[100px]  ">
             <img class="z-50 ring-4 ring-zinc-300 rounded-full border  " src="images/mon-mexico 1.png" alt="maxico" />
-            <h4 class="font-bold text-center max-[375px]:hidden ">Maxico</h4>
-            <p class="text-xs text-zinc-400 text-center max-[375px]:hidden ">03 Tour</p>
+            <h4 class="font-bold text-center max-[375px]:hidden max-[1200px]:hidden ">Maxico</h4>
+            <p class="text-xs text-zinc-400 text-center max-[375px]:hidden max-[1200px]:hidden ">03 Tour</p>
           </div>
         </div>
         <div
           class="w-[120px] h-[204px] absolute left-10 max-[375px]:w-[29px] max-[375px]:h-[29px] max-[375px]:left-[100px]">
-          <div class="france mt-52 ml-[700px]  flex flex-col items-center w-20 h-20 max-[375px]:h-[29px] max-[375px]:w-10 max-[375px]:ml-[60px] max-[375px]:mt-11">
+          <div class="france mt-52 ml-[700px]  flex flex-col items-center w-20 h-20 max-[375px]:h-[29px] max-[375px]:w-10 max-[375px]:ml-[60px] max-[375px]:mt-11 max-[1200px]:h-[29px] max-[1200px]:w-10 max-[1200px]:ml-[60px] max-[1200px]:mt-11">
             <img class="z-50 ring-4 ring-zinc-300 rounded-full border  " src="images/mon-france 1.png" alt="france" />
-            <h4 class="font-bold text-center max-[375px]:hidden">France</h4>
-            <p class="text-xs text-zinc-400 text-center max-[375px]:hidden">03 Tour</p>
+            <h4 class="font-bold text-center max-[375px]:hidden max-[1200px]:hidden">France</h4>
+            <p class="text-xs text-zinc-400 text-center max-[375px]:hidden max-[1200px]:hidden">03 Tour</p>
           </div>
         </div>
         <div
           class="w-[120px] h-[204px] absolute left-10 max-[375px]:w-[29px] max-[375px]:h-[29px] max-[375px]:left-[100px]">
-          <div class="aus mt-[500px] ml-[1200px] flex flex-col items-center w-20 h-20 max-[375px]:h-[29px] max-[375px]:w-10 max-[375px]:ml-[180px] max-[375px]:mt-[120px]  ">
+          <div class="aus mt-[500px] ml-[1200px] flex flex-col items-center w-20 h-20 max-[375px]:h-[29px] max-[375px]:w-10 max-[375px]:ml-[180px] max-[375px]:mt-[120px] max-[1200px]:h-[29px] max-[1200px]:w-10 max-[1200px]:ml-[180px] max-[1200px]:mt-[120px]  ">
             <img class="z-50 ring-4 ring-zinc-300 rounded-full border " src="images/mon-australia 1.png" alt="Aus" />
-            <h4 class="font-bold text-center max-[375px]:hidden">Australia</h4>
-            <p class="text-xs text-zinc-400 text-center max-[375px]:hidden">02 Tour</p>
+            <h4 class="font-bold text-center max-[375px]:hidden max-[1200px]:hidden">Australia</h4>
+            <p class="text-xs text-zinc-400 text-center max-[375px]:hidden max-[1200px]:hidden">02 Tour</p>
           </div>
         </div>  
     </div>
   </div>
   </section>
-  <footer class=" w-[100vw] h-[818px] relative flex items-center max-[375px]:w-full max-[375px]:h-[562px]">
+  <footer class=" w-[100vw] h-[818px] relative flex items-center max-[375px]:w-full max-[375px]:h-[562px] max-[1200px]:w-full max-[1200px]:h-[562px]">
     <div
-      class="Subscribs brightness-150 bg-cover bg-no-repeat w-full h-[818px] max-[375px]:w-full max-[375px]:h-[562px]  "
+      class="Subscribs brightness-150 bg-cover bg-no-repeat w-full h-[818px] max-[375px]:w-full max-[375px]:h-[562px] max-[1200px]:w-full max-[1200px]:h-[562px]  "
       style="background-image: url('https://s3-alpha-sig.figma.com/img/d6f7/2f7e/40921abfd4cc950137a434c2a881e4f9?Expires=1716163200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=OY1~LdshUzU4d2qV4NWVqdWjViqN2HtltX-C7jKBTWTLUkqESWOm3W1pECyDD8f2a88RuNgk56OsMyX85iv7gDflGanMjRo2N7Hlzd4ZL9-~kVXGpr6y7uHLyk9DnOB5GXNiWCt8jxwwvN8Ox6L7AG9mrZS4QJ7BOXVwJZ5JESfGPkYkqfLgzZN3OfnzXMpEgaVRm~gjRoawtboNSwUuU16twAmzzemQ5n4gAbETyzxn6JJwTF5o88VVrNjS6gnICDD-tq~d0ZR5371BJ-C-lwKv6qXoilO~ktlIpPB5JkQvCTC53EBydkQRElcSV6oLsZ7xjAJ1BrLaO6KejQ98Zg__');">
       <div
-        class="w-[690px] h-[600px] z-1 absolute left-[150px] bottom-5 flex flex-col justify-between max-[375px]:w-[355px] max-[375px]:h-[470px] max-[375px]:left-2">
-        <p class=" font-bold text-5xl font-poppins w-[528px] h-[204px] max-[375px]:w-[327px] max-[375px]:h-[120px] ">
+        class="w-[690px] h-[600px] z-1 absolute left-[150px] bottom-5 flex flex-col justify-between max-[375px]:w-[355px] max-[375px]:h-[470px] max-[375px]:left-2 max-[1200px]:w-[355px] max-[1200px]:h-[470px] max-[1200px]:left-2 ">
+        <p class=" font-bold text-5xl font-poppins w-[528px] h-[204px] max-[375px]:w-[327px] max-[375px]:h-[120px] max-[1200px]:w-[327px] max-[1200px]:h-[120px] ">
           Subscribe <br>
           for every Tour <br>News & Tips </p>
         <div
-          class="Email w-[574px] h-[100px] rounded-xl flex items-center justify-center p-[10px] max-[375px]:w-[355px] max-[375px]:mt-[80px]">
+          class="Email w-[574px] h-[100px] bg-white shadow-2xl rounded-xl flex items-center justify-center max-[375px]:w-[355px] max-[375px]:mt-[80px] max-[1200px]:w-[355px] max-[1200px]:mt-[80px]">
           <input
-            class="placeholder:text-black w-[310px] h-[70px] shadow-xl border-2 rounded-md focus:outline-none focus:border-orange-500 border-slate-200 hover:border-orange-300 placeholder-slate-300"
+            class="placeholder:text-black w-[574px] h-[100px] shadow-xl border-2 rounded-md focus:outline-none focus:border-orange-500 border-slate-200 hover:border-orange-300 placeholder-slate-300"
             type="Email" placeholder="Enter you email ">
-          <div class="w-[108px] h-[24px] flex items-center justify-between">
+          <div class="w-[177px] h-[70px] flex items-center justify-between">
             <button
-              class="w-[108px] h-[24px] flex items-center justify-between py-10 px-1 p-2 rounded-md bg-orange-600 text-white hover:bg-orange-400 active:bg-orange-600 focus:ring focus:ring-orange-300 ">
+              class="w-[177px] h-[70px] flex items-center justify-center py-10 px-1 p-2 rounded-2xl bg-orange-600 text-white hover:bg-orange-400 active:bg-orange-600 focus:ring focus:ring-orange-300 ">
               Subscribe 🡲
             </button>
           </div>
@@ -527,8 +527,8 @@
 
 
         <div
-          class="Tripp. w-[690px] h-[95px] flex items-end justify-between max-[375px]:flex-col max-[375px]:w-[185px] max-[375px]:h-[170px] max-[375px]:items-start ">
-          <div class=" w-[291px] h-[95px] flex flex-col justify-between max-[375px]:w-[147px] max-[375px]:h-[118px]">
+          class="Tripp. w-[690px] h-[95px] flex items-end justify-between max-[375px]:flex-col max-[375px]:w-[185px] max-[375px]:h-[170px] max-[375px]:items-start max-[1200px]:flex-col max-[1200px]:w-[185px] max-[1200px]:h-[170px] max-[1200px]:items-start ">
+          <div class=" w-[291px] h-[95px] flex flex-col justify-between max-[375px]:w-[147px] max-[375px]:h-[118px] max-[1200px]:w-[147px] max-[1200px]:h-[118px]">
             <p class="text-3xl font-bold font-poppins ">Tripp<span class="text-orange-600">.</span></p>
             <p class="font-bold mt-5">Copyright©Tripp.All right reserved</p>
           </div>
