--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
       style="background-image: url('https://s3-alpha-sig.figma.com/img/d6f7/2f7e/40921abfd4cc950137a434c2a881e4f9?Expires=1716163200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=OY1~LdshUzU4d2qV4NWVqdWjViqN2HtltX-C7jKBTWTLUkqESWOm3W1pECyDD8f2a88RuNgk56OsMyX85iv7gDflGanMjRo2N7Hlzd4ZL9-~kVXGpr6y7uHLyk9DnOB5GXNiWCt8jxwwvN8Ox6L7AG9mrZS4QJ7BOXVwJZ5JESfGPkYkqfLgzZN3OfnzXMpEgaVRm~gjRoawtboNSwUuU16twAmzzemQ5n4gAbETyzxn6JJwTF5o88VVrNjS6gnICDD-tq~d0ZR5371BJ-C-lwKv6qXoilO~ktlIpPB5JkQvCTC53EBydkQRElcSV6oLsZ7xjAJ1BrLaO6KejQ98Zg__');">
       <div
         class="w-[690px] h-[600px] z-1 absolute left-[150px] bottom-5 flex flex-col justify-between max-[375px]:w-[355px] max-[375px]:h-[470px] max-[375px]:left-2 max-[1200px]:w-[355px] max-[1200px]:h-[470px] max-[1200px]:left-2 ">
-        <p class=" font-bold text-5xl font-poppins w-[528px] h-[204px] max-[375px]:w-[327px] max-[375px]:h-[120px] max-[1200px]:w-[327px] max-[1200px]:h-[120px] ">
+        <p class=" font-bold text-5xl max-[375px]:text-4xl max-[375px]:mt-16 max-[1200px]:text-4xl max-[1200px]:mt-16 font-poppins w-[528px] h-[204px] max-[375px]:w-[327px] max-[375px]:h-[120px] max-[1200px]:w-[327px] max-[1200px]:h-[120px] ">
           Subscribe <br>
           for every Tour <br>News & Tips </p>
         <div
@@ -519,7 +519,7 @@
             type="Email" placeholder="Enter you email ">
           <div class="w-[177px] h-[70px] flex items-center justify-between">
             <button
-              class="w-[177px] h-[70px] flex items-center justify-center py-10 px-1 p-2 rounded-2xl bg-orange-600 text-white hover:bg-orange-400 active:bg-orange-600 focus:ring focus:ring-orange-300 ">
+              class="w-[177px] h-[70px] max-[375px]:w-160 max-[375px]:py-5 max-[1200px]:w-160 max-[1200px]:py-5  flex items-center justify-center py-10 px-1 p-2 rounded-2xl bg-orange-600 text-white hover:bg-orange-400 active:bg-orange-600 focus:ring focus:ring-orange-300 ">
               Subscribe 🡲
             </button>
           </div>
