fix:responsive my section and add overflow-x-hidden

--- a/index.html
+++ b/index.html
@@ -466,31 +466,32 @@
     </div>
   </section>
   <!-- Train -->
-  <section class="w-screen h-[1038px] flex items-end justify-center max-[1200px]:w-full max-[1200px]:h-[341px] ">
+
+  <section class="w-full h-[1038px] flex items-end justify-center max-[375px]:w-full max-[375px]:h-[341px] ">
     <div
-      class="w-[100vw] h-[969px] flex flex-col items-center justify-between max-[1200px]:w-[354px] max-[1200px]:h-[294px]">
+      class="w-[100vw] h-[969px] flex flex-col items-center justify-between max-[375px]:w-[354px] max-[375px]:h-[294px]">
       <div
-        class="w-[574px] h-[136px] flex items-center justify-center font-poppins font-bold text-5xl max-[1200px]:text-2xl">
+        class="w-[574px] h-[136px] flex items-center justify-center font-poppins font-bold text-5xl max-[375px]:text-2xl">
         World Top Visiting <br />
         Place in 2021
       </div>
-      <div class=" w-[100vw] h-[743px] flex relative max-[1200px]:w-[354px] max-[1200px]:h-[187px] ">
+      <div class=" w-[100vw] h-[743px] flex relative max-[375px]:w-[354px] max-[375px]:h-[187px] ">
         <img class="z-0 brightness-90" src="images/mon-place.png" alt="place" />
-        <div class="w-full h-[204px] absolute left-10 max-[1200px]:w-[29px] max-[1200px]:h-[29px] ">
+        <div class="w-full h-[204px] absolute left-10 max-[375px]:w-[29px] max-[375px]:h-[29px] ">
           <div
-            class="maxico mt-72 ml-[200px] flex flex-col items-center w-20 h-20  max-[1200px]:h-[29px] max-[1200px]:w-10 max-[1200px]:ml-[10px] max-[1200px]:mt-[100px]  ">
+            class="maxico mt-72 ml-[200px] flex flex-col items-center w-20 h-20  max-[375px]:h-[29px] max-[375px]:w-10 max-[375px]:ml-[10px] max-[375px]:mt-[100px]  ">
             <img class="z-50 ring-4 ring-zinc-300 rounded-full border  " src="images/mon-mexico 1.png" alt="maxico" />
-            <h4 class="font-bold text-center max-[1200px]:hidden ">Maxico</h4>
-            <p class="text-xs text-zinc-400 text-center max-[1200px]:hidden ">03 Tour</p>
+            <h4 class="font-bold text-center max-[375px]:hidden ">Maxico</h4>
+            <p class="text-xs text-zinc-400 text-center max-[375px]:hidden ">03 Tour</p>
           </div>
         </div>
         <div
-          class="w-[120px] h-[204px] absolute left-10 max-[1200px]:w-[29px] max-[1200px]:h-[29px] max-[1200px]:left-[100px]">
+          class="w-[120px] h-[204px] absolute left-10 max-[375px]:w-[29px] max-[375px]:h-[29px] max-[375px]:left-[100px]">
           <div
-            class="france mt-52 ml-[700px]  flex flex-col items-center w-20 h-20 max-[1200px]:h-[29px] max-[1200px]:w-10 max-[1200px]:ml-[60px] max-[1200px]:mt-11">
+            class="france mt-52 ml-[700px]  flex flex-col items-center w-20 h-20 max-[375px]:h-[29px] max-[375px]:w-10 max-[375px]:ml-[60px] max-[375px]:mt-11">
             <img class="z-50 ring-4 ring-zinc-300 rounded-full border  " src="images/mon-france 1.png" alt="france" />
-            <h4 class="font-bold text-center max-[1200px]:hidden">France</h4>
-            <p class="text-xs text-zinc-400 text-center max-[1200px]:hidden">03 Tour</p>
+            <h4 class="font-bold text-center max-[375px]:hidden">France</h4>
+            <p class="text-xs text-zinc-400 text-center max-[375px]:hidden">03 Tour</p>
           </div>
         </div>
         <div
