--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
           Subscribe <br>
           for every Tour <br>News & Tips </p>
         <div
-          class="Email w-[574px] h-[100px] bg-white shadow-2xl rounded-xl flex items-center justify-center max-[375px]:w-[355px] max-[375px]:mt-[80px] max-[1200px]:w-[355px] max-[1200px]:mt-[80px]">
+          class="Email w-[574px] h-[100px] bg-white shadow-2xl rounded-xl flex items-center justify-center max-[375px]:w-[355px] max-[1200px]:w-[355px] ">
           <input
             class="placeholder:text-black w-[574px] h-[100px] shadow-xl border-2 rounded-md focus:outline-none focus:border-orange-500 border-slate-200 hover:border-orange-300 placeholder-slate-300"
             type="Email" placeholder="Enter you email ">
